--- a/index.html
+++ b/index.html
@@ -8,9 +8,7 @@
 </head>
 
 <body>
-    <div style="display:flex;justify-content:center;align-items:center;">
-        <div>🤔</div>
-      </div>
+<rssapp-magazine id="_BDeRO3S13v7rvPLI"></rssapp-magazine><script src="https://widget.rss.app/v1/magazine.js" type="text/javascript" async></script>
 </body>
 
 </html>
